# quix

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-tidy.txt  compile_commands.json  format.sh  iswayland.sh  vcpkg.json
examples/: #main.cpp#  main.cpp  simpleshader.frag  simpleshader.frag.spv  simpleshader.vert  simpleshader.vert.spv  validation.txt
logs/: validation.txt
quix/: CMakeLists.txt  quix_command_list.cpp  quix_command_list.hpp  quix_commands.cpp  quix_commands.hpp  quix_common.hpp  quix_descriptor.cpp  quix_descriptor.hpp  quix_device.cpp  quix_device.hpp  quix_device_impl.cpp  quix_device_impl.hpp  quix_instance.cpp  quix_instance.hpp  quix_logger.cpp  quix_logger.hpp  quix_pch.hpp  quix_pipeline.cpp  quix_pipeline.hpp  quix_pipeline_builder.hpp  quix_render_target.cpp  quix_render_target.hpp  quix_resource.cpp  quix_resource.hpp  quix_shader.cpp  quix_shader.hpp  quix_swapchain.cpp  quix_swapchain.hpp  quix_window.cpp  quix_window.hpp
quix_impl/: CMakeLists.txt  quix_vma.cpp
quix_vma/: CMakeLists.txt
